# Page-analyzer

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  setup.cfg
.github/workflows/: lint_and_test.yml
page_analyzer/: __init__.py  app.py  db_manager.py  tools.py
page_analyzer/templates/: base.html  error.html  error_404.html  error_500.html  index.html  show_url.html  urls.html
