[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Yulia"]
readme = "README.md"

packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "3.12.2"
PyYAML = "^6.0.1"
flask = "^3.0.3"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"
flake8 = "^7.0.0"
pip = "^24.0"
poetry = "1.8.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
